deployments/shop/cat.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cat-service
  labels:
    app: cat
spec:
  type: ClusterIP
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: cat
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cat
  annotations:
    kubernetes.io/change-cause: "mkubik/cat:latest"
spec:
  template:
    metadata:
      labels:
        app: cat
    spec:
      containers:
      - name: cat
        image: mkubik/cat:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: 100m
      imagePullSecrets:
        - name: image-repo-secret
