deployments/shop/ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui
  annotations:
    kubernetes.io/change-cause: "mkubik/ui:latest"
spec:
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: mkubik/ui:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
      imagePullSecrets:
        - name: image-repo-secret
