deployments/shop/website.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  type: NodePort
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 30000
  selector:
    app: ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
  annotations:
    kubernetes.io/change-cause: "mkubik/gateway:latest"
spec:
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: ui
        image: mkubik/gateway:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
      imagePullSecrets:
        - name: image-repo-secret
